move stepper logic to another page

--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -25,5 +25,8 @@
     <EmbeddedResource Update="DatePickerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="StepperPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
