add custom cell object with custom binding params

--- a/App1/App1.csproj
+++ b/App1/App1.csproj
@@ -25,7 +25,7 @@
     <EmbeddedResource Update="DatePickerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="ListViewPage.xaml">
+    <EmbeddedResource Update="listview\ListViewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="PickerPage.xaml">
